--- a/Kaiserreich Korean Translation/localisation/core_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/core_l_english.yml
@@ -346,11 +346,11 @@ GENERATING_GRADIENT_BORDERS:0 "혁명을 배반하는 중"
  MENU_BAR_SAVE_PLAY:0 "저장 & 플레이"
  MENU_BAR_IRONMAN_SAVE:0 "저장된 철인모드 게임"
  MENU_BAR_IRONMAN_PLAIN:0 "철인"
- MENU_HOMEPAGE:0 "카이저라이히 Wiki"
- MENU_FORUM:0 "카이저라이히 Forum"
- #MENU_FACEBOOK:0 "Hearts of Iron IV Facebook"
+ MENU_HOMEPAGE:0 "카이저라이히 디스코드"
+ MENU_FORUM:0 "카이저라이히 포럼"
+ MENU_FACEBOOK:0 "카이저라이히 스팀"
  MENU_TWITTER:0 "카이저라이히 트위터"
- MENU_PRIVACY_POLICY:0 "개인정보 정책"
+ #MENU_PRIVACY_POLICY:0 "카이저라이히 트위터"
  MAIN_MENU:0 "메인메뉴"
  MAIN_MENU_BACK:0 "메뉴로 돌아가기"
  HELP_MENU:0 "도움말"
@@ -1052,7 +1052,7 @@ GENERATING_GRADIENT_BORDERS:0 "혁명을 배반하는 중"
  CAN_JOIN_OPPOSITE_FACTIONS:0 "다른 이념을 이끄는 세력에 가입할 수 있음"
  CAN_OCCUPY_NON_WAR:0 "전쟁중이지 않은 국가의 영토를 소유할 수 있습니다."
  CAN_DECLINE_CALL_TO_WAR:0 "전쟁소집 거부가능"
- CAN_NOT_DECLARE_WAR:0 "전쟁선포 불가능"
+ CAN_NOT_DECLARE_WAR:0 "특정 이벤트나 중점을 통하지 않는한 전쟁선포 불가능"
  CAN_BE_CALLED_TO_WAR:0 "이 국가는 전쟁 중이지 않지만 부를 수 있습니다"
  UNITS_DEPLOYED_TO_OVERLORD:0 "배치된 병력에 대한 제어는 지배국으로 이동됩니다"
  CONFIRM_SAVEGAME_TITLE:0 "저장 데이터를 덮어씁니다"
