--- a/Kaiserreich Korean Translation/localisation/KR_Alash_Autonomy_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Alash_Autonomy_l_english.yml
@@ -48,6 +48,10 @@ ALO_TRK_pupp_others:0 "알라쉬 오르다가 튀르키스탄을 종속국으로
 ALO_RUS_no_int:0 "우리에게 관심이 없다"
 ALO_ann_TRK:0 "알라쉬가 튀르키스탄을 합병하다"
 
+### Tooltips ###
+ALO_cavunit_tt:0 "새로운 기병대가 만들어질 것입니다."
+ALO_bothunit_tt:0 "새로운 기병대와 보병이 만들어질 것입니다."
+
 ### Events ###
 alash.1.t:0 "알라쉬 자치국에 대한 독립?"
 alash.1.d:0 "우리의 국가는,비록 자치령의 형태로 러시아에 속해 있으나, 1920년의 민스크 조약 이후로 사실상의 독립을 유지하고 있다. 비록 1925년 튀르키스탄의 침공을 막아내는 동안 러시아가 우리를 합병하려는 시도를 하였으나, 고맙게도 콜차크 제독의 쿠데타 시도로 인해 우리의 국가의 자주권은 변하지 않았다. 이제 러시아가 혼돈에 빠져 허우적거리고 있으니, 이제 러시아의 억압의 사슬을 벗어 던지고, 알라쉬 오르다가 러시아의 일부분이라는 어처구니 없는 상황을 끝낼 때가 왔다! "
