--- a/Kaiserreich Korean Translation/localisation/KR_Bulgaria_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Bulgaria_l_english.yml
@@ -955,24 +955,24 @@ BUL_aerial_doctrines_desc:0 "We should teach our pilots new methods on how to fl
 
 ### Decisions ###
 BUL_foreign_policy_decisions:0 "대외 정책 결정"
-BUL_foreign_policy_decisions_desc:0 "It is crucial that we begin to shift our focus outward and forge alliances and/or establish ties with other nations so as to solidify our position on the world stage."
+BUL_foreign_policy_decisions_desc:0 "우리가 세계 무대에서 우리의 입지를 굳히기 위해서는 바깥으로 초점을 옮겨 동맹을 맺거나 다른 국가들과 관계를 맺기 시작하는 것이 중요합니다."
 BUL_join_the_weltkrieg:0 "제 2차 세계대전 참전"
-BUL_join_the_weltkrieg_desc:0 "The Second Weltkrieg has broken out, with the Communards and the Germans facing off against each other in what many consider a battle of not only strength, but of attrition. If we are to have a say in the foreign affairs in the world, we must intervene as soon as possible."
+BUL_join_the_weltkrieg_desc:0 "제 2차 세계대전이 시작되었고, 많은 사람들이 힘뿐만 아니라 소모전이라고 생각하는 것에서 공산주의자들과 독일인들이 서로 대치하고 있는 가운데, 만약 우리가 세계의 외교 문제에서 발언권을 가지려면 우리는 가능한 빨리 개입해야만 합니다."
 BUL_seizing_adrianople:0 "아드리아노플 점령"
-BUL_seizing_adrianople_desc:0 "The Turks have been allowed to remain in Thrace for far too long. It is time we put an end to their reign in the region and take Adrianople for ourselves."
+BUL_seizing_adrianople_desc:0 "터키인들은 너무 오랫동안 트라키아에 머물도록 허락되어 왔습니다. 이제 우리는 이 지역에서 그들의 통치를 종식시키고 아드리아노플을 우리 스스로를 위해 받아갈 때입니다."
 BUL_seizing_constantinople:0 "콘스탄티노플 점령"
-BUL_seizing_constantinople_desc:0 "One of the biggest dreams of Ferdinand I has always been the seizure of Constantinople, or Tsarigrad, from the Turks. Seeing as we are now ready to risk receiving any potential backlash for our move, we are now ready to seize the city. Onward!"
-BUL_deposing_codreanu:0 "코데라노 퇴위"
-BUL_deposing_codreanu_desc:0 "Romania, who is under Codreanu's and, consequently, the Iron Guard's rule, is a direct threat to our status in the Balkans. So long as Codreanu is allowed to remain in charge of Romania we cannot rest easy. We must strike first lest the Romanians catch us off guard."
+BUL_seizing_constantinople_desc:0 "페르디난트 1세의 가장 큰 꿈 중 하나는 항상 콘스탄티노플, 즉 차르그라드를 터키로부터 빼앗는 것이었습니다. 우리가 지금 우리의 행동에 대한 어떠한 반발을 받을 수 있는 위험을 감수할 준비가 되어 있는 것을 볼 때, 우리는 이제 도시를 장악할 준비가 되어 있습니다. 전진!"
+BUL_deposing_codreanu:0 "코드레아누 퇴위"
+BUL_deposing_codreanu_desc:0 "코드레아누의 통치 하에 있는, 철위대의 통치는 발칸 반도에서 우리의 지위에 직접적인 위협을 끼치고 있습니다. 코드레아누가 루마니아를 계속 통치하도록 허락된다면 우리는 안심할 수 없습니다. 우리는 루마니아인들이 우리를 경계하지 못하도록 먼저 쳐야만 합니다."
 BUL_strike_at_serbia:0 "세르비아 공격"
-BUL_strike_at_serbia_desc:0 "In order to protect our interests in the Balkans and maintain the Bulgarian hegemony in the region, we must be ready to go on the offensive and pre-emptively attack the Serbian menace."
+BUL_strike_at_serbia_desc:0 "발칸 반도에 대한 우리의 이익을 보호하고 이 지역의 불가리아 패권을 유지하기 위해서는, 우리는 공격을 계속할 준비가 되어 있어야 하며 세르비아의 위협을 선제적으로 공격할 준비가 되어 있어야 합니다."
 BUL_attack_greece:0 "그리스 공격"
-BUL_attack_greece_desc:0 "In order to protect our interests in the Balkans and maintain the Bulgarian hegemony in the region, we must be ready to go on the offensive and pre-emptively attack the Greek menace."
+BUL_attack_greece_desc:0 "발칸 반도에 대한 우리의 이익을 보호하고 이 지역의 불가리아 패권을 유지하기 위해서는, 우리는 공격을 계속할 준비가 되어 있어야 하며 그리스의 위협을 선제적으로 공격할 준비가 되어 있어야 합니다."
 BUL_join_the_internationale:0 "인터네셔널 가입"
-BUL_join_the_internationale_desc:0 "A natural and powerful ally, it would serve us well to align ourselves with the French sphere."
+BUL_join_the_internationale_desc:0 "자연스럽고 강력한 동맹, 그것은 우리 자신을 프랑스의 영향력에 맞추는데 도움이 될 것입니다."
 BUL_align_with_russia:0 "러시아와의 제휴"
-BUL_align_with_russia_desc:0 "A natural and powerful ally, it would serve us well to align ourselves with the Russian sphere."
+BUL_align_with_russia_desc:0 "자연스럽고 강력한 동맹, 그것은 우리 자신을 러시아의 영향력에 맞추는데 도움이 될 것입니다."
 BUL_alliance_with_austria:0 "오스트리아와의 동맹"
-BUL_alliance_with_austria_desc:0 "A natural and powerful ally, it would serve us well to align ourselves with the Austrian sphere."
+BUL_alliance_with_austria_desc:0 "자연스럽고 강력한 동맹, 그것은 우리 자신을 오스트리아의 영향력에 맞추는데 도움이 될 것입니다."
 BUL_join_mitteleuropa:0 "독일 합류"
-BUL_join_mitteleuropa_desc:0 "A natural and powerful ally, it would serve us well to align ourselves with the German sphere."
+BUL_join_mitteleuropa_desc:0 "자연스럽고 강력한 동맹, 그것은 우리 자신을 독일의 영향력에 맞추는데 도움이 될 것입니다."
