--- a/Kaiserreich Korean Translation/localisation/KR_Australasia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Australasia_l_english.yml
@@ -70,6 +70,7 @@ AST_radsoc_ministers_allowed_again:0 "이제 급진사회주의 장관의 내각
 AST_recently_made_demand:0 "지난 6개월 내에 영토를 요구했습니다."
 AST_recent_trade_mission:0 "지난 3개월 내에 무역 사절단을 보냈습니다. "
 AST_labor_has_split:0 "생디칼리스트들이 노동당에서 분리되었습니다.\n"
+AST_rats_of_tobruk_effect_2:0 "An elite commando unit will be formed in Sydney"
 
 ### Ideas ###
 AST_oversized_fleet:0 "비대한 함대"
