--- a/Kaiserreich Korean Translation/localisation/KR_Bahia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Bahia_l_english.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+l_english:
 
 ### Parties ###
 BAH_social_democrat_party:0 "PSD"
@@ -29,7 +29,7 @@ BAH_nationbuilding_desc:0 "We will spare no effort in rebuilding Bahia to the na
 BAH_expell_cairoca_farmers:0 "Expel Southron Farmers"
 BAH_expell_cairoca_farmers_desc:0 "Brazilian landsharks devoured our farmers, and we must work recover the economy from such a blow"
 BAH_infrastructurerenewal:0 "Infrastructure Renewal"
-BAH_infrastructurerenewal_desc:0 "War has torn our lands, and railroads everywhere are deathtraps, sabotaged and ill taken care of. We must change that"
+BAH_infrastructurerenewal_desc:0 "War has torn our lands, and railroads everywhere are death-traps, sabotaged and ill taken care of. We must change that"
 BAH_navalconstructioneffort:0 "Naval Construction Effort"
 BAH_navalconstructioneffort_desc:0 "If we are to establish a fleet, we will need better facilities than those we currently have in Montevideo"
 BAH_rearmament:0 "Rearmament Focus"
@@ -50,7 +50,7 @@ BAH_ladnreform:0 "Enact Land Reform"
 BAH_ladnreform_desc:0 "We have a golden opportunity now to do a sweeping land reform"
 BAH_horsemen:0 "A Legacy of Cavalrymen"
 BAH_horsemen_desc:0 ""
-BAH_pecuaria:0 "Pecuary Incentives"
+BAH_pecuaria:0 "Pecuniary Incentives"
 BAH_pecuaria_desc:0 "Our cattle industry is on the verge of an unprecedented boom. All it needs is a small push"
 BAH_goodtimes:0 "Economic Progress"
 BAH_goodtimes_desc:0 "Our excellent economic situation can still improve with some effort"
@@ -73,7 +73,7 @@ BAH_cas_desc:0 "We will ensure our airforce has close air support bomber craft a
 BAH_todos_os_santos:0 "Bahian Navy"
 BAH_todos_os_santos_desc:0 "Rebuilding a navy from scratch is not easy feat, but we will tackle the challenge!"
 BAH_coastaldefenses:0 "Coastal Defences"
-BAH_coastaldefenses_desc:0 "We will ensure Montevideo is safe from any naval incursions, with the building of coastal defences"
+BAH_coastaldefenses_desc:0 "We will ensure Bahia is safe from any naval incursions, with the building of coastal defences."
 BAH_specialforces:0 "Special Forces"
 BAH_specialforces_desc:0 "Special units will be trained to tackle difficult or hazardous terrain"
 BAH_barata_legion:0 "Barata Legion"
@@ -90,3 +90,21 @@ BAH_trained_general_staff:0 "Trained General Staff"
 BAH_trained_general_staff_desc:0 ""
 BAH_combat_famine:0 "Combat Famine"
 BAH_combat_famine_desc:0 ""
+
+### Ideas ###
+BAHconsti:0 "Affirmed Constitution"
+BAHconsti_desc:0 ""
+BAHlandreform:0 "Land Reform"
+BAHlandreform_desc:0 ""
+BAHcav:0 "Army Of Ranchers"
+BAHcav_desc:0 ""
+BAHpecuaria:0 "Subsidized Ranching"
+BAHpecuaria_desc:0 ""
+BAHsuperduperpecuaria:0 "Ranching Boom"
+BAHsuperduperpecuaria_desc:0 ""
+BAHterrainmastery:0 "Terrain Mastery"
+BAHterrainmastery_desc:0 ""
+BAHheavyprod:0 "Heavy Production"
+BAHheavyprod_desc:0 ""
+BAHstaff:0 "Trained General Staff"
+BAHstaff_desc:0 ""
