--- a/Kaiserreich Korean Translation/localisation/KR_Nationalist_France_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Nationalist_France_l_english.yml
@@ -34,7 +34,7 @@ NFA_fortification_darlan:0 "요새 표준화"
 NFA_navy_expansion_idea:0 "해군 증강"
 NFA_degaulle_plan:0 "드골 계획"
 NFA_southern_conscript_regular:0 "남부 징병 : 정규군"
-NFA_southern_conscript_colonial:0 "남부 징병 : 분리된 군대"
+NFA_southern_conscript_colonial:0 "남부 징병 : 별개의 대"
 NFA_native_conscription1:0 "원주민 징병"
 NFA_native_conscription2:0 "원주민 징병"
 moncef_reduces_conscription_idea:0 "몬세프 베이가 징병에 반대하다"
@@ -356,7 +356,7 @@ nfa.27.d:0 "Today Henri d'Orléans has been crowned king of France during an orn
 nfa.27.a:0 "국왕 폐하 만세!"
 nfa.28.t:0 "페탱 원수가 은퇴하다"
 nfa.28.d:0 "Maréchal Pétain, the hero of Verdun and leader of our nation has decided to relinquish his position as the leader of France. In an emotional address to the nation the Maréchal told the nation that he had faith in current administration to lead France from now on. Nevertheless, we will miss the old man."
-nfa.28.a:0 "안녕하시게, 우리 원수여"
+nfa.28.a:0 "안녕히 가시게, 우리 원수여"
 nfa.29.t:0 "왕이 승하하다"
 nfa.29.d:0 "존경하는 장 3세가 오늘 65세의 나이로 세상을 떠났습니다. 그의 시신은 알제 대성당에 안치될 것입니다. 그의 아들 앙리의 대관식 준비는 이미 진행되고 있습니다."
 nfa.29.a:0 "국왕 폐하께서 승하하셨다, 새 국왕 폐하 만세!"
@@ -380,7 +380,7 @@ nfa.37.d:0 "다를랑 제독을 해군을 확장함으로써 우리를 코뮌으
 nfa.37.a:0 "끝내주는군!"
 nfa.38.t:0 "남부 징병"
 nfa.38.d:0 "Nationalist France had been struggling with manpower. The reputation of the French military had been tarnished by its failure in the Weltkrieg and volunteering was at an all time low. Fiercely national Frenchman could not be the only source of manpower and other sources of manpower were needed. The government looked to the people in the south of the country."
-nfa.38.a:0 "그들을 징병하되 분리된 식민지 부대로 편성하라"
+nfa.38.a:0 "그들을 징병하되  식민지 부대로 편성하라"
 nfa.38.b:0 "그들을 징병해 곧바로 정규군으로 편성하라"
 nfa.39.t:0 "드 골이 겁쟁이 정부를 고발하다"
 nfa.39.d:0 "드 골 장군은 군대를 확충시키는 대신 요새를 건설하는 우리의 정책을 공개적으로 비난했습니다. 장군은 콘크리트 뒤에서 코뮌이 우리에게 오기를 기다릴 것이 아니라, 그들과 싸울 준비를 해야 한다고 합니다. 이 사람을 어떻게 할까요?"
@@ -542,7 +542,7 @@ nfa.84.c:0 "완전 점령이 바람직하다."
 nfa.85.t:0 "Forces armees francaises"
 nfa.85.d:0 "With our return to the French mainland the time has come to build the armed forces worthy of Napoleon. Fortunately the French people are rallying to their rightful government and the vanquished Communards have left plenty of equipment behind, which we can use."
 nfa.85.a:0 "프랑스 만세!"
-nfa.86.t:0 "프랑스 국민 저항군 등장"
+nfa.86.t:0 "프랑스 국민 저항군 "
 nfa.86.d:0 "French population, enraged by status of our state as a puppet of foreign powers have turned to exile government in Algiers for protection. With help from Algiers, various nationalist organisations in France intensified their activity aimed against our status in the new Europe in order to help exile government in its return to mainland!"
 nfa.86.a:0 "젠장할!"
 nfa.87.t:0 "레지스탕스 형성"
