--- a/Kaiserreich Korean Translation/localisation/KR_Nationalist_France_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Nationalist_France_l_english.yml
@@ -380,7 +380,7 @@ nfa.37.d:0 "다를랑 제독을 해군을 확장함으로써 우리를 코뮌으
 nfa.37.a:0 "끝내주는군!"
 nfa.38.t:0 "남부 징병"
 nfa.38.d:0 "Nationalist France had been struggling with manpower. The reputation of the French military had been tarnished by its failure in the Weltkrieg and volunteering was at an all time low. Fiercely national Frenchman could not be the only source of manpower and other sources of manpower were needed. The government looked to the people in the south of the country."
-nfa.38.a:0 "그들을 징병하되 식민지 부대로 편성하라"
+nfa.38.a:0 "그들을 징병하되 별개의 식민지 부대로 편성하라"
 nfa.38.b:0 "그들을 징병해 곧바로 정규군으로 편성하라"
 nfa.39.t:0 "드 골이 겁쟁이 정부를 고발하다"
 nfa.39.d:0 "드 골 장군은 군대를 확충시키는 대신 요새를 건설하는 우리의 정책을 공개적으로 비난했습니다. 장군은 콘크리트 뒤에서 코뮌이 우리에게 오기를 기다릴 것이 아니라, 그들과 싸울 준비를 해야 한다고 합니다. 이 사람을 어떻게 할까요?"
