--- a/Kaiserreich Korean Translation/localisation/KR_Chile_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Chile_l_english.yml
@@ -380,6 +380,7 @@ chl.11.b:0 "절대 안돼!"
 chl.12.t:0 "갈라파고스 점령"
 chl.12.d:0 "우리는 에콰도르 본토에서의 전쟁으로 주의를 돌리고 우리 함대의 해군기지로 쓰기 위해 갈라파고스를 점령할 수 있습니다."
 chl.12.a:0 "해라! 우리 위대한 함대는 태평양을 지배한다!"
+chl.12.b:0 "안하는게 낫다."
 chl.13.t:0 "미국 노동자들의 봉기!"
 chl.13.d:0 "아메리카 노동 연맹이 연방정부에 대항해 반란을 일으켰습니다. 이는 우리 미국 동지들을 돕고 우리 군대의 경험을 얻을 큰 기회일 수 있습니다."
 chl.13.a:0 "그들을 지원할 것이다!"
@@ -498,13 +499,13 @@ chl.48.d:0 "The time has come for the Junta to end and for the people to finally
 chl.48.a:0 "Carlos Ibáñez del Campo and the Popular Freedom Alliance"
 chl.48.b:0 "Juan Esteban Montero and the Pact of Calais"
 chl.48.c:0 "Arturo Allessandri and the Liberal Party"
-chl.48.d:0 "Jorge González von Marées and the Committee of Officers Against Atheism and Traitors"
+chl.48.e:0 "Jorge González von Marées and the Committee of Officers Against Atheism and Traitors"
 chl.49.t:0 "1947 Democratic Elections"
 chl.49.d:0 "Six years have past since the first democratic elections since the syndicalist regime had been deposed, and the time has come once again to vote for the next ruling party of Chile's republic. Again there are 4 candidates on the ballot and the elections are expected to be a toss up again"
 chl.49.a:0 "Rafael Fernandez Reyes and the Popular Freedom Alliance"
 chl.49.b:0 "Gabriel González Videla and the Pact of Calais"
 chl.49.c:0 "Eduardo Alessandri and the Liberal Party"
-chl.49.d:0 "Jorge González von Marées and the Committee of Officers Against Atheism and Traitors"
+chl.49.e:0 "Jorge González von Marées and the Committee of Officers Against Atheism and Traitors"
 chl.50.t:0 "Anarchists and Socialists request re-legalization"
 chl.50.d:0 "Though their party was banned by the former Junta many Anarchists and Socialists are still hopeful they can participate in the politics of the new republic, and have requested the legalization of their parties once more"
 chl.50.a:0 "It will help peace"
@@ -513,3 +514,13 @@ chl.51.t:0 "Our Antartic Claims"
 chl.51.d:0 "Chile has long claimed ownership of parts of Antarctica, We could more agressively enforce these claims if we wish"
 chl.51.a:0 "Why? There's just Penguins there"
 chl.51.b:0 "It belongs to Chile!"
+chl.52.t:0 "Chile is Seizing the Galapagos"
+chl.52.d:0 "Taking advantage of our conflict with Peru, Chile has made a move on the Galapagos, attempting to seize the island while we are distracted by our war."
+chl.52.a:0 "There is nothing we can do..."
+chl.52.b:0 "Order the garrison to fight them off!"
+chl.53.t:0 "Failure in the Galapagos"
+chl.53.d:0 "Despite our brilliant plan to seize the Galapagos islands while Ecuador was distracted by their war, the islands were garrisoned far more heavily than we expected, and our invasion was sent back into the sea. This is an embarrasment for the nation, and Ecuador is unlikely to forget our transgressions."
+chl.53.a:0 "Damm them!"
+
+### Opinion Modifiers ###
+CHL_heroes:0 "Brothers and Sisters in arms"
