--- a/Kaiserreich Korean Translation/localisation/KR_Companies_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Companies_l_english.yml
@@ -11,18 +11,54 @@ generic_industrial_company:0 "일반 산업 회사"
 generic_naval_company:0 "일반 선박 제조사"
 
 ### American Union State ###
-mc_wane:0 "맥웨인"
-eckert_mauchly:0 "에케르트-모클리"
-union_carbide:0 "유니언 카바이드"
-kr_remington:0 "레밍턴"
-army_ordnance_department:0 "군수품 보급부"
-nash:0 "내시"
-american_car_and_foundry:0 "아메리칸 카 앤드 파운드리"
-kr_aus_marmon_herrington:0 "마먼-헤링턴"
-fairchild:0 "페어차일드"
-keystone_loening:0 "키스톤-뢰닝"
-ingalls_shipbuilding:0 "잉걸스 조선"
-higgins:0 "히긴스"
+kr_koch_tex:0 "Koch Industries"
+kr_ibm_company_tex:0 "IBM"
+kr_general_electric_tex:0 "General Electric"
+kr_bethlehem_steel_tex:0 "Bethlehem Steel"
+kr_att_tex:0 "AT&T"
+kr_dupont_tex:0 "DuPont"
+kr_raytheon_tex:0 "Raytheon"
+
+kr_savage_arms_tex:0 "Savage Arms"
+kr_marlin_firearms_tex:0 "Marlin Firearms"
+kr_harrington_richardson_tex:0 "Harrington & Richardson"
+kr_browning_tex:0 "브라우닝"
+kr_remington_tex:0 "레밍턴"
+kr_smith_wesson_tex:0 "Smith & Wesson"
+kr_springfield_armory_tex:0 "Springfield Armory"
+kr_winchester_western_tex:0 "Winchester Western"
+kr_colt_tex:0 "콜트"
+
+kr_cushman_tex:0 "Cushman"
+kr_winton_tex:0 "Winton"
+kr_willys_tex:0 "윌리스"
+kr_king_tex:0 "킹"
+kr_army_ordence_department_tex:0 "Army Ordnance Department"
+kr_american_car_tex:0 "American Car and Foundry"
+kr_ford_tex:0 "포드"
+kr_jackson_tex:0 "잭슨"
+kr_dorris_tex:0 "도리스"
+kr_bantam_tex:0 "American Bantam"
+kr_dodge_tex:0 "닷지"
+
+kr_fairchild_tex:0 "Fairchild"
+kr_keystone_tex:0 "키스톤"
+kr_curtis_wright_tex:0 "Curtiss-Wright"
+kr_boeing_tex:0 "보잉"
+kr_beechcraft_tex:0 "Beechcraft"
+kr_grumman_tex:0 "Grumman"
+kr_north_american_aviation_tex:0 "North American Aviation"
+kr_douglas_tex:0 "더글라스"
+kr_ryan_aircraft_tex:0 "Ryan Aircraft"
+kr_lockheed_tex:0 "록히드"
+kr_panam_tex:0 "Pan-American"
+
+kr_newport_news_tex:0 "Newport News"
+kr_norfolk_shipyard_tex:0 "Norfolk Shipyard"
+kr_new_york_shipbuilding_tex:0 "Newyork Shipbuilding"
+kr_electric_boat_tex:0 "Electric Boat"
+kr_philadelphia_naval_shipyard_tex:0 "Philadelphia Naval Shipyard"
+kr_higgins_tex:0 "히긴스"
 
 ### Armenia ###
 zangezur_combine:0 "장에주르 구리 & 몰리브덴 조합"
@@ -52,6 +88,7 @@ puch:0 "푸흐"
 leopold_gasser_waffenfabrik:0 "레오폴트 가서 군수 공업"
 semperit:0 "젬페리트"
 austro_daimler:0 "오스트로 다임러"
+hansa_brandenburg_aus:0 "한자-브란덴부르크"
 skoda:1 "스코다"
 phoenix:0 "푀닉스 항공기공장"
 steyr:0 "슈타이어"
@@ -60,7 +97,6 @@ kapsch:0 "AG 카프시 & 죄네"
 graef_stift:0 "그래프 & 슈티프트"
 aviatik:0 "오스트리아 항공"
 lohner:0 "로너"
-hansa_brandenburg:0 "한자 브란덴부르크"
 sauerwerke:0 "자우어공장"
 stabilimento_tecnico_triestino:0 "트리에스테 기술 공업"
 bayer_austria:0 "바이어 오스트리아"
@@ -70,7 +106,7 @@ wiener_neu_lokomotiv:0 "빈 노이슈타트 기관차 공장"
 wiener_neu_flugzeug:0 "빈 노이슈타트 항공기 공장"
 oeffag:0 "오스트리아 항공기공장 AG"
 
-### Bharatiyan Commune ###
+### Bharatiya Commune ###
 bengalese_steel_mills:0 "벵골 제강"
 bengal_ordnance_factories:0 "벵골 군수 공업"
 premier_automobiles:0 "제일 차량 유한회사"
@@ -159,19 +195,54 @@ orenda_engines:0 "오렌다 엔진"
 raac_canada:0 "왕립 대서양 항공"
 
 ### Combined Syndicates of America ###
-kr_us_steel:0 "US 철강"
-kr_att:0 "AT&T"
-bfgoodrich:0 "BFGoodrich"
-auto_ordnance_corporation:0 "Auto-Ordnance Corporation"
-harrington_richardson:0 "Harrington & Richardson"
-rock_island_arsenal:0 "Rock Island Arsenal"
-american_bantam:0 "American Bantam"
-kr_dodge:0 "도지"
-baldwin_locomotive_works:0 "Baldwin Locomotive Works"
-fisher_tank_arsenal:0 "Fisher Tank Arsenal"
-brewster:0 "Brewster"
-consolidated:0 "Consolidated"
-philadelphia_naval_shipyard:0 "필라델피아 해군 조선소"
+kr_us_steel_csa:0 "US Steel"
+kr_att_csa:0 "At&T"
+kr_bfgoodrich_csa:0 "BFGoodrich"
+kr_raytheon_csa:0 "Raytheon"
+kr_dupont_csa:0 "DuPont"
+kr_bethlehem_steel_csa:0 "Bethlehem Steel"
+kr_general_electric_csa:0 "General Electric"
+kr_ibm_company_csa:0 "IBM"
+kr_standard_oil_csa:0 "American Oil Cooperative"
+
+kr_auto_ordnance_cooperative_csa:0 "Auto-Ordnance Cooperative"
+kr_colt_csa:0 "콜트"
+kr_winchester_western_csa:0 "Winchester Western"
+kr_springfield_armory_csa:0 "Springfield Armory"
+kr_smith_wesson_csa:0 "Smith & Wesson"
+kr_browning_csa:0 "브라우닝"
+kr_remington_csa:0 "레밍턴"
+kr_harrington_richardson_csa:0 "Harrington & Richardson"
+kr_marlin_firearms_csa:0 "Marlin Firearms"
+kr_savage_arms_csa:0 "Savage Arms"
+
+kr_excelsior_csa:0 "엑셀시어"
+kr_hudson_csa:0 "허드슨"
+kr_durant_csa:0 "Durant"
+kr_rock_island_arsenal_csa:0 "Rock Island Arsenal"
+kr_american_car_csa:0 "American Car and Foundry"
+kr_lexington_csa:0 "Lexington"
+kr_fisher_tank_arsenal_csa:0 "Fisher tank Arsenal"
+kr_jordan_csa:0 "Jordan"
+kr_baldwin_locomotive_works_csa:0 "Baldwin Locomotive Works"
+
+kr_aeronca_csa:0 "Aeronca Aircraft"
+kr_brewster_csa:0 "Consolidated"
+kr_consolidated_csa:0 "Brewster"
+kr_north_american_aviation_csa:0 "North American Aviation"
+kr_beechcraft_csa:0 "Beechcraft"
+kr_grumman_csa:0 "Grumman"
+kr_boeing_csa:0 "보잉"
+kr_lockheed_csa:0 "록히드"
+kr_ryan_aircraft_csa:0 "Ryan Aircraft"
+kr_douglas_csa:0 "더글라스"
+
+kr_newport_news_csa:0 "Newport News"
+kr_norfolk_shipyard_csa:0 "Norfolk Shipyard"
+kr_new_york_shipbuilding_csa:0 "Newyork Shipbuilding"
+kr_electric_boat_csa:0 "Electric Boat"
+kr_philadelphia_naval_shipyard_csa:0 "Philadelphia Navel Shipyard"
+kr_higgins_csa:0 "히긴스"
 
 ### Commune of France ###
 metallurgique_de_normandie:0 "Société Métallurgique de Normandie"
@@ -205,6 +276,11 @@ taz:0 "TAZ"
 tzv_gredelj:0 "TŽV Gredelj"
 aviatik_kroatien_slawonien:0 "Aviatik Kroatien-Slawonien"
 brodosplit:0 "Brodosplit"
+
+### Cuba ###
+havanashipyard:0 "Havana Shipyard"
+Waco_Aircraft_Company:0 "WACO Aircraft Company"
+Waco_Aircraft_Company_desc:0 "Lacking a substantial domestic aircraft manufacturer, with the collapse of the Ohio-based WACO Aircraft Company, whose biplanes had achieved a stellar reputation among Cuban pilots, in 1931, the Cuban government purchased the company and enticed its design team to move to Cuba as well."
 
 ### Denmark ###
 atlas_maskinfabrik:0 "Atlas Maskinfabrik AS"
@@ -263,15 +339,15 @@ heliopolis_chemical:0 "Heliopolis Chemical Industries"
 egyptian_telephone_telegraph:0 " Egyptian Telephone and Telegraph Company"
 maadi_engineering:0 "Maadi Engineering Industries"
 deutsche_ost_afrika_linie_egypt:0 "Deutsche Ost-Afrika Linie"
-suez_canal_company:0 "Suez Canal Company"
+suez_canal_company:0 "수에즈 운하 회사"
 red_sea_ports_authority:0 "Red Sea Ports Authority"
-alexandria_shipyard:0 "Alexandria Shipyard"
-sudan_airways:0 "Sudan Airways"
-egypt_air:0 "EgyptAir"
+alexandria_shipyard:0 "알렉산드리아 조선소"
+sudan_airways:0 "수단 에어웨이"
+egypt_air:0 "이집트 항공"
 egyptian_engineering:0 "Egyptian Engineering Agencies"
-krupp_egypt:0 "Krupp Ägypten"
+krupp_egypt:0 "크루프 이집트"
 opel_egypt:0 "Opel El Sakkakini"
-daimler_benz_egypt:0 "Daimler-Benz Ägypten"
+hanomag_egypt:0 "Hanomag Ägypten"
 walther_egypt:0 "Walther Ägypten"
 mauser_egypt:0 "Mauser Ägypten"
 shoubra_engineering:0 "Shoubra Engineering"
@@ -365,6 +441,24 @@ magyar_lloyd:0 "Magyar Lloyd"
 ungarische_flugzeugfabrik:0 "Ungarische Flugzeugfabrik A.G."
 danubian_aircraft_company:0 "Danubian Aircraft Company"
 
+### Iran ###
+krupp_PER:0 "크루프 이란"
+aeg_PER:0 "AEG Irān"
+solvay_PER:0 "Solvay Irān"
+imperial_oil_PER:0 "황실 석유"
+aga_PER:0 "AGA Irān"
+zbrojovka_brno_PER:0 "Zbrojovka Brno Irān"
+steyr_PER:0 "슈타이어 이란"
+walther_PER:0 "발터 이란"
+dominion_cartridge_PER:0 "Dominion Cartridge Irān"
+krupp2_PER:0 "크루프 이란"
+skoda_PER:0 "스코다 이란"
+scania_vabis_PER:0 "Scania Vabis"
+volvo_PER:0 "볼보"
+general_motors_iran:0 "제네럴모터스 이란"
+svenska_aeroplan_PER:0 "Svenska Aeroplan Irān"
+wilton_fijenoord_PER:0 "Wilton-Fijenoord"
+
 ### Ireland ###
 goulding_chemicals:0 "Goulding Chemicals"
 murphy_radio:0 "Murphy"
@@ -418,7 +512,7 @@ fabrica_militar_aviones:0 "군용 항공기 공장"
 afne:0 "AFNE"
 astarsa:0 "ASTARSA"
 astilleros_alianza:0 "조선소 연합"
-argentina_bmw:0 "BMW 아르헨티나"
+argentina_bmw:0 "DMW 아르헨티나"
 argentina_mauser:0 "마우저 아르헨티나"
 argentina_fokker:0 "포커 아르헨티나"
 argentina_frc:0 "FRC 아르헨티나"
@@ -450,7 +544,7 @@ marinenachrichtendienst:0 "Marinenachrichtendienst"
 amani_research_institute:0 "Amani Research Institute"
 mauser_maf:0 "Mauser Mittelafrika"
 bundesarsenal_dar_es_salaam:0 "Bundesarsenal Dar-es-Salaam"
-daimler_benz_afrika:0 "Daimler-Benz Afrika"
+opel_afrika:0 "Opel Dar-es-Salaam"
 maf_dpaeb:0 "Deutsche Pan-Afrikanische Eisenbahn"
 rumpler_afrika:0 "Rumpler Flugzeugwerke Mittelafrika"
 focke_wulf_afrika:0 "Focke Wulf Afrika"
@@ -546,22 +640,57 @@ golcuk_tersanesi:0 "괼쥑 조선소"
 taskizak_tersanesi:0 "타시크자크 조선소"
 
 ### Pacific States of America ###
-southern_pacific_railroad:0 "남태평양 철도"
-westinghouse:0 "웨스팅하우스"
-socal:0 "캘리포니아 표준 정유"
-browning:0 "브라우닝"
-mack_trucks:0 "맥"
-pacific_car_and_foundry:0 "태평양 자동차 및 주조회사"
-packard:0 "패커드"
-lockheed:0 "록히드"
-ryan_aircraft:0 "Ryan"
-douglas:0 "더글라스"
-glenn_martin:0 "Glenn L. Martin Company"
-northrop:0 "Northrop Corporation"
-vultee_aircraft:0 "Vultee"
-hughes_aircraft:0 "Hughes Aircraft"
-kaiser_shipyards:0 "카이저 조선소"
-mare_island_shipyard:0 "Mare Island Naval Shipyard"
+kr_westinghouse_psa:0 "Westinghouse"
+kr_raytheon_psa:0 "Raytheon"
+kr_dupont_psa:0 "DuPont"
+kr_us_steel_psa:0 "US Steal"
+kr_att_psa:0 "AT&T"
+kr_bethlehem_steel_psa:0 "Bethlehem Steel"
+kr_general_electric_psa:0 "General Electric"
+kr_ibm_company_psa:0 "IBM"
+kr_standard_oil_psa:0 "Standard Oil of California"
+
+kr_colt_psa:0 "콜트"
+kr_winchester_western_psa:0 "Winchester Repeating Arms"
+kr_springfield_armory_psa:0 "Springfield Armory"
+kr_smith_wesson_psa:0 "Smith & Winston"
+kr_browning_psa:0 "브라우닝"
+kr_remington_psa:0 "레밍턴 암스"
+kr_harrington_richardson_psa:0 "Harrington & Richardson Arms Company."
+kr_marlin_firearms_psa:0 "Marlin Firearms"
+kr_savage_arms_psa:0 "Savage Arms"
+
+kr_packard_psa:0 "Packard"
+kr_mack_trucks_psa:0 "Mack"
+kr_marmon_psa:0 "Marmon"
+kr_henderson_psa:0 "Henderson"
+kr_army_ordence_department_psa:0 "Army Ordnance Department"
+kr_davis_psa:0 "Davis"
+kr_duesenberg_psa:0 "Duesenberg"
+kr_auburn_psa:0 "Auburn"
+kr_white_motor_psa:0 "화이트모터"
+kr_stutz_psa:0 "Stutz"
+
+kr_lockheed_psa:0 "록히드"
+kr_ryan_aircraft_psa:0 "Ryan"
+kr_douglas_psa:0 "더글라스"
+kr_glenn_martin_psa:0 "Glenn L. Martin Company"
+kr_northrop_psa:0 "Northrop Corporation"
+kr_vultee_aircraft_psa:0 "Vultee"
+kr_hughes_aircraft_psa:0 "Hughes Aircraft"
+kr_north_american_aviation_psa:0 "North American Aviation"
+kr_curtiss_wright_psa:0 "커티스-라이트"
+kr_beechcraft_psa:0 "Beechcraft"
+kr_boeing_psa:0 "보잉"
+
+kr_kaiser_shipyards_psa:0 "카이저 조선소"
+kr_mare_island_shipyard_psa:0 "Mare Island Naval Shipyard"
+kr_newport_news_psa:0 "Newport News Shipbuilding"
+kr_norfolk_shipyard_psa:0 "노퍽 해군 조선소"
+kr_new_york_shipbuilding_psa:0 "New York Shipbuilding"
+kr_electric_boat_psa:0 "Electric Boat"
+kr_philadelphia_naval_shipyard_psa:0 "필라델피아 해군 조선소"
+kr_higgins_psa:0 "히긴스"
 
 ### Paraguay ###
 AA:0 "아순시온 무기고"
@@ -791,18 +920,20 @@ aeroput:0 "Aeroput"
 ### Siam ###
 chaiseri:0 "Chaiseri Metal & Rubber"
 thairung:0 "Thairung"
-bangkok_dock:0 "Bangkok Dock Company"
+bangkok_dock:0 "방콕 부두 회사"
 rung_paisarn:0 "Rung Paisarn Heavy Industries"
 SIA_DTI:0 "Defence Technology Institute"
-siam_cement:0 "Siam Cement"
+siam_cement:0 "시암 시멘트"
 siam_aeronautics:0 "Siam Aeronautics"
-SIA_TAI:0 "Thai Aviation Industries"
-tanin:0 "Tanin Industrial Company"
-SIA_MEF:0 "Military Explosives Factory"
+SIA_TAI:0 "타이 항공 산업"
+tanin:0 "타닌 산업 회사"
+SIA_MEF:0 "군용 폭발물 공장"
 chulalongkorn:0 "Chulalongkorn University"
-SIA_ford:0 "Ford Siam"
-SIA_SSR:0 "Siam State Railway"
+SIA_ford:0 "포드 시암"
+SIA_SSR:0 "시암 국영 철도"
 RSAFW:0 "Royal Siamese Air Force Workshop"
+SIA_BGrimm:0 "B.Grimm"
+SIA_Energy_Dept:0 "Siamese Fuel Department"
 
 ### Socialist Republic of Italy ###
 accademia_militare_modena:0 "Accademia Militare di Modena"
@@ -940,14 +1071,15 @@ waffenfabrik_solothurn:0 "Waffenfabrik Solothurn"
 schweizerische_industrie_gesellschaft:0 "Schweizerische Industrie Gesellschaft"
 waffenfabrik_bern:0 "Waffenfabrik Bern"
 oerlikon:0 "Oerlikon"
-swi_steel:0 "Swiss Steel"
+swi_steel:0 "스위스 철강"
+sulzer_ag:0 "Sulzer AG"
 swi_saurer:0 "Saurer"
 swi_fbw:0 "FBW"
 eidgenossische_konstruktionswerkstatte:0 "Eidgenössische Konstruktionswerkstätte"
-berna:0 "Berna"
+berna:0 "베르나"
 eidgenossisches_flugzeugwerk:0 "Eidgenössisches Flugzeugwerk"
 flug_fahrzeugwerke_altenrhein:0 "Flug- und Fahrzeugwerke Altenrhein"
-pilatus:0 "Pilatus"
+pilatus:0 "필라투스"
 werner_risch:0 "Werner Risch"
 
 ### Ukraine ###
@@ -1026,42 +1158,64 @@ vef:0 "VEF"
 liepajas_kara:0 "Liepājas Kara Ostas Darbnīcas"
 riga_shipyard:0 "Rīgas Kuģu Būvētava"
 
-### USA ###
-bethlehem_steel:0 "베슬리헴스틸"
-general_electric:0 "제너럴일렉트릭"
-ibm_company:0 "IBM"
-standard_oil_usa:0 "스탠다드 오일"
-colt:0 "콜트"
-winchester_western:0 "윈체스터 웨스턴"
-kr_springfield_armory:0 "스프링필드 아머리"
-watervliet_arsenal:0 "워터브리엣 아스널"
-studebacker:0 "스튜드배커"
-lima_locomotive_works:0 "리마 로코모티브 워크스"
-kr_chrysler:0 "크라이슬러"
+### United States of America ###
+kr_westinghouse_usa:0 "Westinghouse"
+kr_raytheon_usa:0 "Raytheon"
+kr_dupont_usa:0 "DuPont"
+kr_us_steel_usa:0 "U.S. Steel"
+kr_att_usa:0 "AT&T"
+kr_bethlehem_steel_usa:0 "Bethlehem Steel"
+kr_general_electric_usa:0 "General Electric"
+kr_ibm_company_usa:0 "IBM"
+kr_standard_oil_usa:0 "Standard Oil"
+kr_colt_usa:0 "콜트"
+kr_winchester_western_usa:0 "Winchester Repeating Arms"
+kr_springfield_armory_usa:0 "Springfield Armory"
+kr_smith_wesson_usa:0 "Smith & Winston"
+kr_browning_usa:0 "브라우닝 암스"
+kr_remington_usa:0 "레밍턴 암스"
+kr_harrington_richardson_usa:0 "Harrington & Richardson Arms Company"
+kr_marlin_firearms_usa:0 "Marlin Firearms"
+kr_savage_arms_usa:0 "Savage Arms"
+kr_watervliet_arsenal_usa:0 "Watervliet Arsenal"
+kr_studebacker_usa:0 "Studebaker"
+kr_chrysler_usa:0 "크라이슬러"
 kr_ford_usa:0 "포드"
-kr_general_motors:0 "제너럴모터스"
-catterpillar:0 "캐터필러"
-kr_north_american_aviation:0 "북아메리카 항공"
-kr_bell_aircraft:0 "벨"
-beechcraft:0 "비치크라프트"
-kr_grumman:0 "그러먼"
-kr_boeing:0 "보잉"
-kr_curtiss_wright:0 "커티스 라이트"
-kr_newport_news:0 "뉴포트뉴스 조선소"
-kr_norfolk_shipyard:0 "노퍽 조선소"
-new_york_shipbuilding:0 "뉴욕 조선 주식회사"
-kr_electric_boat:0 "일렉트릭 보트"
+kr_general_motors_usa:0 "제너럴모터스"
+kr_catterpillar_usa:0 "케터필라"
+kr_army_ordnance_department_usa:0 "Army Ordnance Department"
+kr_nash_usa:0 "Nash Motors"
+kr_maxwell_usa:0 "맥스웰"
+kr_buick_usa:0 "Buick"
+kr_cunningham_usa:0 "Cunningham"
+kr_north_american_aviation_usa:0 "North American Aviation"
+kr_bell_aircraft_usa:0 "벨"
+kr_beechcraft_usa:0 "Beechcraft"
+kr_grumman_usa:0 "그루먼"
+kr_boeing_usa:0 "보잉"
+kr_curtiss_wright_usa:0 "커티스 라이트"
+kr_lockheed_usa:0 "록히드"
+kr_ryan_aircraft_usa:0 "라이언"
+kr_douglas_usa:0 "더글라스"
+kr_glenn_martin_usa:0 "Glenn L. Martin Company"
+kr_pan_american_usa:0 "Pan American Airways"
+kr_newport_news_usa:0 "Newport News Shipbuilding"
+kr_norfolk_shipyard_usa:0 "노퍽 해군 조선소"
+kr_new_york_shipbuilding_usa:0 "New York Shipbuilding"
+kr_electric_boat_usa:0 "Electric Boat"
+kr_philadelphia_naval_shipyard_usa:0 "필라델피아 해군 조선소"
+kr_higgins_usa:0 "히긴스"
 
 ### Belorussia ###
 white_ruthenia_state_university:0 "Belorussia State University"
-gomel_radio_plant:0 "Gomel Radio Plant"
-minsk_automobile_plant:0 "Minsk Automotive Factory"
-baranovichi_aviation_repair_plant:0 "Baranovichi Aviation Repair Plant"
-pinsk_shipyard:0 "Pinsk Shipyard"
+gomel_radio_plant:0 "Homel Radio Plant"
+minsk_automobile_plant:0 "민스크 자동차 공장"
+baranovichi_aviation_repair_plant:0 "Baranavičy Aviation Repair Plant"
+pinsk_shipyard:0 "핀스크 조선소"
 bsvt:0 "Belspetsvneshtechnika"
 belaz:0 "BelAZ"
 mzkt:0 "MZKT"
-belarusian_railway:0 "Belarusian Railway"
+belarusian_railway:0 "벨라루스 철도"
 
 ### Albania ###
 telekomi_shqiptar:0 "Telekomi Shqiptar"
@@ -1085,46 +1239,46 @@ rumpler_flugzeugwerke_china:0 "Rumpler Flugzeugwerke China"
 kaiserliche_werft_guangzhou:0 "Kaiserliche Werft Guangzhou"
 
 ### Germany ###
-krupp:0 "크루프 AG"
+krupp:0 "크루프"
 deutscher_kaiser:0 "Gewerkschaft Deutscher Kaiser"
 koenigslaura:0 "Vereinigte Königs- und Laurahütte"
-krupp2:0 "크루프 AG 모노폴"
+krupp2:0 "크루프 모노폴"
 aeg:0 "AEG"
 braun_company:0 "브라운"
-ig_farben_company:0 "파르벤 이익공동체"
+basf:0 "BASF"
 mauser:0 "마우저"
-erma_werke:0 "에르마 베르케"
+dwm:0 "Deutsche Waffen- und Munitionsfabriken"
 haenel:0 "해넬"
 sauer_sohn:0 "사우어 앤 손"
 walther:0 "발터"
 rheinmetall:0 "라인메탈"
 opel:0 "오펠"
 hanomag:0 "하노마그"
-porsche:0 "포르쉐"
+demag:0 "Demag"
 adler:0 "아들러"
-bmw:0 "BMW"
+krupp3:0 "크루프"
 man_company:0 "MAN"
-daimler_benz:0 "다임러-벤츠"
+daimler:0 "다임러"
 vomag:0 "포마그"
-maybach:0 "마이바흐"
+benz:0 "Benz & Cie."
 albatros:0 "알바트로스"
 fokker_ger:0 "포커"
 dornier:0 "도르니에"
 fieseler_company:0 "피젤러"
 focke_wulf:0 "포케불프"
 gothaer_waggonfabrik:0 "Gothaer Waggonfabrik"
-heinkel:0 "하잉켈"
+hansa_brandenburg:0 "한자-브란덴부르크"
 henschel:0 "핸셸"
 junkers:0 "융커스"
 luftschiffbau_zeppelin:0 "Luftschiffbau Zeppelin"
-messerschmitt:0 "Messerschmitt"
+bfw:0 "Bayerische Flugzeugwerke"
 siemens_schuckert:0 "Siemens-Schuckert"
-arado:0 "아라도"
+friedrichshafen:0 "Flugzeugbau Friedrichshafen"
 blohm_voss:0 "Blohm und Voss"
 germaniawerft:0 "Germaniawerft"
 kaiserliche_werft_wilhelmshaven:0 "Wilhelmshavenwerft"
 schichau_werke:0 "Schichau-Werke"
-vulcan_stettin:0 "AG Vulcan Stettin"
+vulcan_stettin:0 "불칸-베르케 함부르크 & 슈테틴"
 siemens_schuckert2:0 "Siemens-Schukert Verbessert"
 
 ### Flanders-Wallonia ###
@@ -1264,12 +1418,12 @@ raffineria_livorno_tus:0 "Raffineria di Livorno"
 
 ### Uruguay ###
 ancap:0 "ANCAP"
-aeg_urg:0 "AEG Uruguay"
+aeg_urg:0 "AEG 우루과이"
 imbel_urg:0 "IMBEL"
 adm:0 "Armas de Montevideo"
 hispano_urg:0 "Hispano-Uruguay"
-bmw_urg:0 "BMW"
-fokker_urg:0 "Fokker"
+krupp_urg:0 "크루프 우루과이"
+fokker_urg:0 "포커"
 ao_urg:0 "Astillero Oriental"
 
 ### Venice ###
