--- a/Kaiserreich Korean Translation/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -4,6 +4,99 @@ l_english:
 #New Cosmetic tags
 ########################
 
+ANT_1_totalist:0 "Antillean Union"
+ANT_1_totalist_ADJ:0 "Antillean"
+ANT_1_totalist_DEF:0 "the Antillean Union"
+ANT_1_syndicalist:0 "Antillean Union"
+ANT_1_syndicalist_ADJ:0 "Antillean"
+ANT_1_syndicalist_DEF:0 "the Antillean Union"
+ANT_1_radical_socialist:0 "Antillean Union"
+ANT_1_radical_socialist_ADJ:0 "Antillean"
+ANT_1_radical_socialist_DEF:0 "the Antillean Union"
+ANT_1_social_democrat:0 "Antillean Union"
+ANT_1_social_democrat_ADJ:0 "Antillean"
+ANT_1_social_democrat_DEF:0 "the Antillean Union"
+ANT_1_social_liberal:0 "Antillean Union"
+ANT_1_social_liberal_ADJ:0 "Antillean"
+ANT_1_social_liberal_DEF:0 "the Antillean Union"
+ANT_1_market_liberal:0 "Antillean Union"
+ANT_1_market_liberal_ADJ:0 "Antillean"
+ANT_1_market_liberal_DEF:0 "the Antillean Union"
+ANT_1_social_conservative:0 "Antillean Union"
+ANT_1_social_conservative_ADJ:0 "Antillean"
+ANT_1_social_conservative_DEF:0 "the Antillean Union"
+ANT_1_authoritarian_democrat:0 "Antillean Union"
+ANT_1_authoritarian_democrat_ADJ:0 "Antillean"
+ANT_1_authoritarian_democrat_DEF:0 "the Antillean Union"
+ANT_1_paternal_autocrat:0 "Antillean Union"
+ANT_1_paternal_autocrat_ADJ:0 "Antillean"
+ANT_1_paternal_autocrat_DEF:0 "the Antillean Union"
+ANT_1_national_populist:0 "Antillean Union"
+ANT_1_national_populist_ADJ:0 "Antillean"
+ANT_1_national_populist_DEF:0 "the Antillean Union"
+
+ANT_2_totalist:0 "Antillean Union"
+ANT_2_totalist_ADJ:0 "Antillean"
+ANT_2_totalist_DEF:0 "the Antillean Union"
+ANT_2_syndicalist:0 "Antillean Union"
+ANT_2_syndicalist_ADJ:0 "Antillean"
+ANT_2_syndicalist_DEF:0 "the Antillean Union"
+ANT_2_radical_socialist:0 "Antillean Union"
+ANT_2_radical_socialist_ADJ:0 "Antillean"
+ANT_2_radical_socialist_DEF:0 "the Antillean Union"
+ANT_2_social_democrat:0 "Antillean Union"
+ANT_2_social_democrat_ADJ:0 "Antillean"
+ANT_2_social_democrat_DEF:0 "the Antillean Union"
+ANT_2_social_liberal:0 "Antillean Union"
+ANT_2_social_liberal_ADJ:0 "Antillean"
+ANT_2_social_liberal_DEF:0 "the Antillean Union"
+ANT_2_market_liberal:0 "Antillean Union"
+ANT_2_market_liberal_ADJ:0 "Antillean"
+ANT_2_market_liberal_DEF:0 "the Antillean Union"
+ANT_2_social_conservative:0 "Antillean Union"
+ANT_2_social_conservative_ADJ:0 "Antillean"
+ANT_2_social_conservative_DEF:0 "the Antillean Union"
+ANT_2_authoritarian_democrat:0 "Antillean Union"
+ANT_2_authoritarian_democrat_ADJ:0 "Antillean"
+ANT_2_authoritarian_democrat_DEF:0 "the Antillean Union"
+ANT_2_paternal_autocrat:0 "Antillean Union"
+ANT_2_paternal_autocrat_ADJ:0 "Antillean"
+ANT_2_paternal_autocrat_DEF:0 "the Antillean Union"
+ANT_2_national_populist:0 "Antillean Union"
+ANT_2_national_populist_ADJ:0 "Antillean"
+ANT_2_national_populist_DEF:0 "the Antillean Union"
+
+AUP_totalist:0 "Austrian People's Republic"
+AUP_totalist_ADJ:0 "Austrian"
+AUP_totalist_DEF:0 "the Austrian People's Republic"
+AUP_syndicalist:0 "Austrian People's Republic"
+AUP_syndicalist_ADJ:0 "Austrian"
+AUP_syndicalist_DEF:0 "the Austrian People's Republic"
+AUP_radical_socialist:0 "Austrian People's Republic"
+AUP_radical_socialist_ADJ:0 "Austrian"
+AUP_radical_socialist_DEF:0 "the Austrian People's Republic"
+AUP_social_democrat:0 "Austria"
+AUP_social_democrat_ADJ:0 "Austrian"
+AUP_social_democrat_DEF:0 "Austria"
+AUP_social_liberal:0 "Austria"
+AUP_social_liberal_ADJ:0 "Austrian"
+AUP_social_liberal_DEF:0 "Austria"
+AUP_market_liberal:0 "Austria"
+AUP_market_liberal_ADJ:0 "Austrian"
+AUP_market_liberal_DEF:0 "Austria"
+AUP_social_conservative:0 "Austria"
+AUP_social_conservative_ADJ:0 "Austrian"
+AUP_social_conservative_DEF:0 "Austria"
+AUP_authoritarian_democrat:0 "Austria"
+AUP_authoritarian_democrat_ADJ:0 "Austrian"
+AUP_authoritarian_democrat_DEF:0 "Austria"
+AUP_paternal_autocrat:0 "Austria"
+AUP_paternal_autocrat_ADJ:0 "Austrian"
+AUP_paternal_autocrat_DEF:0 "Austria"
+AUP_national_populist:0 "Austria"
+AUP_national_populist_ADJ:0 "Austrian"
+AUP_national_populist_DEF:0 "Austria"
+
 SER_republic_totalist:0 "세르비아 사회주의 공화국"
 SER_republic_totalist_ADJ:0 "세르비아"
 SER_republic_totalist_DEF:0 "세르비아 사회주의 공화국"
@@ -540,36 +633,36 @@ YEM_ARA_totalist:0 "아라비아 인민 연방"
 YEM_ARA_totalist_ADJ:0 "붉은 아라비아"
 YEM_ARA_totalist_DEF:0 "아라비아 인민 연방
 
-LYB_LYB_authoritarian_democrat:0 "리비아"
-LYB_LYB_authoritarian_democrat_ADJ:0 "리비아"
-LYB_LYB_authoritarian_democrat_DEF:0 "리비아"
-LYB_LYB_market_liberal:0 "리비아"
-LYB_LYB_market_liberal_ADJ:0 "리비아"
-LYB_LYB_market_liberal_DEF:0 "리비아"
-LYB_LYB_national_populist:0 "리비아"
-LYB_LYB_national_populist_ADJ:0 "리비아"
-LYB_LYB_national_populist_DEF:0 "리비아"
-LYB_LYB_paternal_autocrat:0 "리비아 왕국"
-LYB_LYB_paternal_autocrat_ADJ:0 "리비아"
-LYB_LYB_paternal_autocrat_DEF:0 "리비아 왕국"
-LYB_LYB_radical_socialist:0 "리비아 아라비아 인민 연방"
-LYB_LYB_radical_socialist_ADJ:0 "붉은 아라비아"
-LYB_LYB_radical_socialist_DEF:0 "리비아 아라비아 인민 연방"
-LYB_LYB_social_conservative:0 "리비아"
-LYB_LYB_social_conservative_ADJ:0 "리비아"
-LYB_LYB_social_conservative_DEF:0 "리비아"
-LYB_LYB_social_democrat:0 "리비아"
-LYB_LYB_social_democrat_ADJ:0 "리비아"
-LYB_LYB_social_democrat_DEF:0 "리비아"
-LYB_LYB_social_liberal:0 "리비아"
-LYB_LYB_social_liberal_ADJ:0 "리비아"
-LYB_LYB_social_liberal_DEF:0 "리비아"
-LYB_LYB_syndicalist:0 "아라비아 노동 연맹"
-LYB_LYB_syndicalist_ADJ:0 "붉은 아라비아"
-LYB_LYB_syndicalist_DEF:0 "아라비아 노동 연맹"
-LYB_LYB_totalist:0 "리비아 인민 아랍 공화국"
-LYB_LYB_totalist_ADJ:0 "리비아 인민 아랍 공화국"
-LYB_LYB_totalist_DEF:0 "리비아 인민 아랍 공화국"
+LBA_libya_authoritarian_democrat:0 "리비아"
+LBA_libya_authoritarian_democrat_ADJ:0 "리비아"
+LBA_libya_authoritarian_democrat_DEF:0 "리비아"
+LBA_libya_market_liberal:0 "리비아"
+LBA_libya_market_liberal_ADJ:0 "리비아"
+LBA_libya_market_liberal_DEF:0 "리비아"
+LBA_libya_national_populist:0 "리비아"
+LBA_libya_national_populist_ADJ:0 "리비아"
+LBA_libya_national_populist_DEF:0 "리비아"
+LBA_libya_paternal_autocrat:0 "리비아 왕국"
+LBA_libya_paternal_autocrat_ADJ:0 "리비아"
+LBA_libya_paternal_autocrat_DEF:0 "리비아 왕국"
+LBA_libya_radical_socialist:0 "리비아 아라비아 인민 연방"
+LBA_libya_radical_socialist_ADJ:0 "붉은 아라비아"
+LBA_libya_radical_socialist_DEF:0 "리비아 아라비아 인민 연방"
+LBA_libya_social_conservative:0 "리비아"
+LBA_libya_social_conservative_ADJ:0 "리비아"
+LBA_libya_social_conservative_DEF:0 "리비아"
+LBA_libya_social_democrat:0 "리비아"
+LBA_libya_social_democrat_ADJ:0 "리비아"
+LBA_libya_social_democrat_DEF:0 "리비아"
+LBA_libya_social_liberal:0 "리비아"
+LBA_libya_social_liberal_ADJ:0 "리비아"
+LBA_libya_social_liberal_DEF:0 "리비아"
+LBA_libya_syndicalist:0 "아라비아 노동 연맹"
+LBA_libya_syndicalist_ADJ:0 "붉은 아라비아"
+LBA_libya_syndicalist_DEF:0 "아라비아 노동 연맹"
+LBA_libya_totalist:0 "리비아 인민 아랍 공화국"
+LBA_libya_totalist_ADJ:0 "리비아 인민 아랍 공화국"
+LBA_libya_totalist_DEF:0 "리비아 인민 아랍 공화국"
 
 IFR_authoritarian_democrat:0 "이프리키야"
 IFR_authoritarian_democrat_ADJ:0 "이프리키야"
@@ -720,36 +813,36 @@ KAZ_caf_totalist:0 "중앙아시아 연방"
 KAZ_caf_totalist_ADJ:0 "중앙아시아"
 KAZ_caf_totalist_DEF:0 "중앙아시아 연방"
 
-AUS_GER_authoritarian_democrat:0 "독일 제국"
-AUS_GER_authoritarian_democrat_ADJ:0 "독일"
-AUS_GER_authoritarian_democrat_DEF:0 "독일 제국"
-AUS_GER_market_liberal:0 "독일 제국"
-AUS_GER_market_liberal_ADJ:0 "독일"
-AUS_GER_market_liberal_DEF:0 "독일 제국"
-AUS_GER_national_populist:0 "독일 제국"
-AUS_GER_national_populist_ADJ:0 "독일"
-AUS_GER_national_populist_DEF:0 "독일 제국"
-AUS_GER_paternal_autocrat:0 "독일 제국"
-AUS_GER_paternal_autocrat_ADJ:0 "독일"
-AUS_GER_paternal_autocrat_DEF:0 "독일 제국"
-AUS_GER_radical_socialist:0 "독일 제국"
-AUS_GER_radical_socialist_ADJ:0 "독일"
-AUS_GER_radical_socialist_DEF:0 "독일 제국"
-AUS_GER_social_conservative:0 "독일 제국"
-AUS_GER_social_conservative_ADJ:0 "독일"
-AUS_GER_social_conservative_DEF:0 "독일 제국"
-AUS_GER_social_democrat:0 "독일 제국"
-AUS_GER_social_democrat_ADJ:0 "독일"
-AUS_GER_social_democrat_DEF:0 "독일 제국"
-AUS_GER_social_liberal:0 "독일 제국"
-AUS_GER_social_liberal_ADJ:0 "독일"
-AUS_GER_social_liberal_DEF:0 "독일 제국"
-AUS_GER_syndicalist:0 "독일 제국"
-AUS_GER_syndicalist_ADJ:0 "독일"
-AUS_GER_syndicalist_DEF:0 "독일 제국"
-AUS_GER_totalist:0 "독일 제국"
-AUS_GER_totalist_ADJ:0 "독일"
-AUS_GER_totalist_DEF:0 "독일 제국"
+AUP_GER_authoritarian_democrat:0 "독일 제국"
+AUP_GER_authoritarian_democrat_ADJ:0 "독일"
+AUP_GER_authoritarian_democrat_DEF:0 "독일 제국"
+AUP_GER_market_liberal:0 "독일 제국"
+AUP_GER_market_liberal_ADJ:0 "독일"
+AUP_GER_market_liberal_DEF:0 "독일 제국"
+AUP_GER_national_populist:0 "독일 제국"
+AUP_GER_national_populist_ADJ:0 "독일"
+AUP_GER_national_populist_DEF:0 "독일 제국"
+AUP_GER_paternal_autocrat:0 "독일 제국"
+AUP_GER_paternal_autocrat_ADJ:0 "독일"
+AUP_GER_paternal_autocrat_DEF:0 "독일 제국"
+AUP_GER_radical_socialist:0 "독일 제국"
+AUP_GER_radical_socialist_ADJ:0 "독일"
+AUP_GER_radical_socialist_DEF:0 "독일 제국"
+AUP_GER_social_conservative:0 "독일 제국"
+AUP_GER_social_conservative_ADJ:0 "독일"
+AUP_GER_social_conservative_DEF:0 "독일 제국"
+AUP_GER_social_democrat:0 "독일 제국"
+AUP_GER_social_democrat_ADJ:0 "독일"
+AUP_GER_social_democrat_DEF:0 "독일 제국"
+AUP_GER_social_liberal:0 "독일 제국"
+AUP_GER_social_liberal_ADJ:0 "독일"
+AUP_GER_social_liberal_DEF:0 "독일 제국"
+AUP_GER_syndicalist:0 "독일 제국"
+AUP_GER_syndicalist_ADJ:0 "독일"
+AUP_GER_syndicalist_DEF:0 "독일 제국"
+AUP_GER_totalist:0 "독일 제국"
+AUP_GER_totalist_ADJ:0 "독일"
+AUP_GER_totalist_DEF:0 "독일 제국"
 
 
 CZE_habsburg_totalist:0 "보헤미아 사회주의 공화국"
@@ -2438,9 +2531,9 @@ BHC_AGR_radical_socialist:0 "농업주의자 반란군"
 BHC_AGR_radical_socialist_ADJ:0 "농업주의자"
 BHC_AGR_radical_socialist_DEF:0 "농업주의자 반란군"
 
-LYB_ITA_subject:0 "이탈리아령 북아프리카"
-LYB_ITA_subject_DEF:0 "이탈리아령 북아프리카"
-LYB_ITA_subject_ADJ:0 "리비아"
+LBA_ITA_subject:0 "이탈리아령 북아프리카"
+LBA_ITA_subject_DEF:0 "이탈리아령 북아프리카"
+LBA_ITA_subject_ADJ:0 "리비아"
 
 TUN_subject:0 "$OVERLORDADJ$령 튀니지"
 TUN_subject_DEF:0 "$OVERLORDADJ$령 튀니지"
@@ -2786,61 +2879,61 @@ BRA_ARG_totalist:0 "브라질 코뮌 연합"
 BRA_ARG_totalist_ADJ:0 "브라질"
 BRA_ARG_totalist_DEF:0 "브라질 코뮌 연합"
 
-AUS_CIS_market_liberal:0 "시스라이타니아 오스트리아"
-AUS_CIS_market_liberal_ADJ:0 "오스트리아"
-AUS_CIS_market_liberal_DEF:0 "시스라이타니아 오스트리아"
-AUS_CIS_national_populist:0 "시스라이타니아 오스트리아"
-AUS_CIS_national_populist_ADJ:0 "오스트리아"
-AUS_CIS_national_populist_DEF:0 "시스라이타니아 오스트리아"
-AUS_CIS_paternal_autocrat:0 "시스라이타니아 오스트리아"
-AUS_CIS_paternal_autocrat_ADJ:0 "오스트리아"
-AUS_CIS_paternal_autocrat_DEF:0 "시스라이타니아 오스트리아"
-AUS_CIS_radical_socialist:0 "시스라이타니아 오스트리아"
-AUS_CIS_radical_socialist_ADJ:0 "오스트리아"
-AUS_CIS_radical_socialist_DEF:0 "시스라이타니아 오스트리아"
-AUS_CIS_social_conservative:0 "시스라이타니아 오스트리아"
-AUS_CIS_social_conservative_ADJ:0 "오스트리아"
-AUS_CIS_social_conservative_DEF:0 "시스라이타니아 오스트리아"
-AUS_CIS_social_democrat:0 "시스라이타니아 오스트리아"
-AUS_CIS_social_democrat_ADJ:0 "오스트리아"
-AUS_CIS_social_democrat_DEF:0 "시스라이타니아 오스트리아"
-AUS_CIS_social_liberal:0 "시스라이타니아 오스트리아"
-AUS_CIS_social_liberal_ADJ:0 "오스트리아"
-AUS_CIS_social_liberal_DEF:0 "시스라이타니아 오스트리아"
-AUS_CIS_authoritarian_democrat:0 "시스라이타니아 오스트리아"
-AUS_CIS_authoritarian_democrat_ADJ:0 "오스트리아"
-AUS_CIS_authoritarian_democrat_DEF:0 "시스라이타니아 오스트리아"
-AUS_CIS_totalist:0 "시스라이타니아 오스트리아"
-AUS_CIS_totalist_ADJ:0 "오스트리아"
-AUS_CIS_totalist_DEF:0 "시스라이타니아 오스트리아"
+AUP_CIS_market_liberal:0 "시스라이타니아 오스트리아"
+AUP_CIS_market_liberal_ADJ:0 "오스트리아"
+AUP_CIS_market_liberal_DEF:0 "시스라이타니아 오스트리아"
+AUP_CIS_national_populist:0 "시스라이타니아 오스트리아"
+AUP_CIS_national_populist_ADJ:0 "오스트리아"
+AUP_CIS_national_populist_DEF:0 "시스라이타니아 오스트리아"
+AUP_CIS_paternal_autocrat:0 "시스라이타니아 오스트리아"
+AUP_CIS_paternal_autocrat_ADJ:0 "오스트리아"
+AUP_CIS_paternal_autocrat_DEF:0 "시스라이타니아 오스트리아"
+AUP_CIS_radical_socialist:0 "시스라이타니아 오스트리아"
+AUP_CIS_radical_socialist_ADJ:0 "오스트리아"
+AUP_CIS_radical_socialist_DEF:0 "시스라이타니아 오스트리아"
+AUP_CIS_social_conservative:0 "시스라이타니아 오스트리아"
+AUP_CIS_social_conservative_ADJ:0 "오스트리아"
+AUP_CIS_social_conservative_DEF:0 "시스라이타니아 오스트리아"
+AUP_CIS_social_democrat:0 "시스라이타니아 오스트리아"
+AUP_CIS_social_democrat_ADJ:0 "오스트리아"
+AUP_CIS_social_democrat_DEF:0 "시스라이타니아 오스트리아"
+AUP_CIS_social_liberal:0 "시스라이타니아 오스트리아"
+AUP_CIS_social_liberal_ADJ:0 "오스트리아"
+AUP_CIS_social_liberal_DEF:0 "시스라이타니아 오스트리아"
+AUP_CIS_authoritarian_democrat:0 "시스라이타니아 오스트리아"
+AUP_CIS_authoritarian_democrat_ADJ:0 "오스트리아"
+AUP_CIS_authoritarian_democrat_DEF:0 "시스라이타니아 오스트리아"
+AUP_CIS_totalist:0 "시스라이타니아 오스트리아"
+AUP_CIS_totalist_ADJ:0 "오스트리아"
+AUP_CIS_totalist_DEF:0 "시스라이타니아 오스트리아"
 
-AUS_united_states_market_liberal:0 "대 오스트리아 합중국"
-AUS_united_states_market_liberal_ADJ:0 "오스트리아"
-AUS_united_states_market_liberal_DEF:0 "대 오스트리아 합중국"
-AUS_united_states_national_populist:0 "대 오스트리아 합중국"
-AUS_united_states_national_populist_ADJ:0 "오스트리아"
-AUS_united_states_national_populist_DEF:0 "대 오스트리아 합중국"
-AUS_united_states_paternal_autocrat:0 "대 오스트리아 합중국"
-AUS_united_states_paternal_autocrat_ADJ:0 "오스트리아"
-AUS_united_states_paternal_autocrat_DEF:0 "대 오스트리아 합중국"
-AUS_united_states_radical_socialist:0 "대 오스트리아 합중국"
-AUS_united_states_radical_socialist_ADJ:0 "오스트리아"
-AUS_united_states_radical_socialist_DEF:0 "대 오스트리아 합중국"
-AUS_united_states_social_conservative:0 "대 오스트리아 합중국"
-AUS_united_states_social_conservative_ADJ:0 "오스트리아"
-AUS_united_states_social_conservative_DEF:0 "대 오스트리아 합중국"
-AUS_united_states_social_democrat:0 "대 오스트리아 합중국"
-AUS_united_states_social_democrat_ADJ:0 "오스트리아"
-AUS_united_states_social_democrat_DEF:0 "대 오스트리아 합중국"
-AUS_united_states_social_liberal:0 "대 오스트리아 합중국"
-AUS_united_states_social_liberal_ADJ:0 "오스트리아"
-AUS_united_states_social_liberal_DEF:0 "대 오스트리아 합중국"
-AUS_united_states_authoritarian_democrat:0 "대 오스트리아 합중국"
-AUS_united_states_authoritarian_democrat_ADJ:0 "오스트리아"
-AUS_united_states_authoritarian_democrat_DEF:0 "대 오스트리아 합중국"
-AUS_united_states_totalist:0 "대 오스트리아 합중국"
-AUS_united_states_totalist_ADJ:0 "오스트리아"
-AUS_united_states_totalist_DEF:0 "대 오스트리아 합중국"
+AUP_united_states_market_liberal:0 "대 오스트리아 합중국"
+AUP_united_states_market_liberal_ADJ:0 "오스트리아"
+AUP_united_states_market_liberal_DEF:0 "대 오스트리아 합중국"
+AUP_united_states_national_populist:0 "대 오스트리아 합중국"
+AUP_united_states_national_populist_ADJ:0 "오스트리아"
+AUP_united_states_national_populist_DEF:0 "대 오스트리아 합중국"
+AUP_united_states_paternal_autocrat:0 "대 오스트리아 합중국"
+AUP_united_states_paternal_autocrat_ADJ:0 "오스트리아"
+AUP_united_states_paternal_autocrat_DEF:0 "대 오스트리아 합중국"
+AUP_united_states_radical_socialist:0 "대 오스트리아 합중국"
+AUP_united_states_radical_socialist_ADJ:0 "오스트리아"
+AUP_united_states_radical_socialist_DEF:0 "대 오스트리아 합중국"
+AUP_united_states_social_conservative:0 "대 오스트리아 합중국"
+AUP_united_states_social_conservative_ADJ:0 "오스트리아"
+AUP_united_states_social_conservative_DEF:0 "대 오스트리아 합중국"
+AUP_united_states_social_democrat:0 "대 오스트리아 합중국"
+AUP_united_states_social_democrat_ADJ:0 "오스트리아"
+AUP_united_states_social_democrat_DEF:0 "대 오스트리아 합중국"
+AUP_united_states_social_liberal:0 "대 오스트리아 합중국"
+AUP_united_states_social_liberal_ADJ:0 "오스트리아"
+AUP_united_states_social_liberal_DEF:0 "대 오스트리아 합중국"
+AUP_united_states_authoritarian_democrat:0 "대 오스트리아 합중국"
+AUP_united_states_authoritarian_democrat_ADJ:0 "오스트리아"
+AUP_united_states_authoritarian_democrat_DEF:0 "대 오스트리아 합중국"
+AUP_united_states_totalist:0 "대 오스트리아 합중국"
+AUP_united_states_totalist_ADJ:0 "오스트리아"
+AUP_united_states_totalist_DEF:0 "대 오스트리아 합중국"
 
 HUN_TRANS_market_liberal:0 "성 이슈트반 왕관령 오스트리아"
 HUN_TRANS_market_liberal_ADJ:0 "헝가리"
@@ -3660,3 +3753,34 @@ DELETTHEJAPENESEEASTINDIES_paternal_autocrat_DEF:0 "인술인디아 이슬람국
 DELETTHEJAPENESEEASTINDIES_national_populist:0 "인술인디아 연방"
 DELETTHEJAPENESEEASTINDIES_national_populist_ADJ:0 "인술인디아"
 DELETTHEJAPENESEEASTINDIES_national_populist_DEF:0 "인술인디아 연방"
+
+EGYK_totalist:0 "Egyptian Republic"
+EGYK_totalist_ADJ:0 "Egyptian"
+EGYK_totalist_DEF:0 "the Egyptian Republic"
+EGYK_syndicalist:0 "Egyptian Republic"
+EGYK_syndicalist_ADJ:0 "Egyptian"
+EGYK_syndicalist_DEF:0 "the Egyptian Republic"
+EGYK_radical_socialist:0 "Egyptian Republic"
+EGYK_radical_socialist_ADJ:0 "Egyptian"
+EGYK_radical_socialist_DEF:0 "the Egyptian Republic"
+EGYK_social_democrat:0 "Khedivate of Egypt"
+EGYK_social_democrat_ADJ:0 "Egyptian"
+EGYK_social_democrat_DEF:0 "the Khedivate of Egypt"
+EGYK_social_liberal:0 "Khedivate of Egypt"
+EGYK_social_liberal_ADJ:0 "Egyptian"
+EGYK_social_liberal_DEF:0 "the Khedivate of Egypt"
+EGYK_market_liberal:0 "Khedivate of Egypt"
+EGYK_market_liberal_ADJ:0 "Egyptian"
+EGYK_market_liberal_DEF:0 "the Khedivate of Egypt"
+EGYK_social_conservative:0 "Khedivate of Egypt"
+EGYK_social_conservative_ADJ:0 "Egyptian"
+EGYK_social_conservative_DEF:0 "the Khedivate of Egypt"
+EGYK_authoritarian_democrat:0 "Khedivate of Egypt"
+EGYK_authoritarian_democrat_ADJ:0 "Egyptian"
+EGYK_authoritarian_democrat_DEF:0 "the Khedivate of Egypt"
+EGYK_paternal_autocrat:0 "Khedivate of Egypt"
+EGYK_paternal_autocrat_ADJ:0 "Egyptian"
+EGYK_paternal_autocrat_DEF:0 "the Khedivate of Egypt"
+EGYK_national_populist:0 "Khedivate of Egypt"
+EGYK_national_populist_ADJ:0 "Egyptian"
+EGYK_national_populist_DEF:0 "the Khedivate of Egypt"
