--- a/Kaiserreich Korean Translation/localisation/KR_Bohemia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Bohemia_l_english.yml
@@ -1,24 +1,24 @@
 l_english:
 
 ### Parties ###
-CZE_totalist_party:0 "RSP"
-CZE_totalist_party_long:0 "Revoluční skupina předvoj"
-CZE_syndicalist_party:0 "FČA"
-CZE_syndicalist_party_long:0 "Federace českých anarchosyndikalistů"
-CZE_radical_socialist_party:0 "NRSDS"
-CZE_radical_socialist_party_long:0 "Neodvislá radikální sociálně demokratická strana"
-CZE_social_democrat_party:0 "SDSD"
-CZE_social_democrat_party_long:0 "Sociálně demokratická strana dělnická"
-CZE_social_liberal_party:0 "Realisté"
-CZE_social_liberal_party_long:0 "Česká strana pokroková"
-CZE_market_liberal_party:0 "Mladočeši"
-CZE_market_liberal_party_long:0 "Národní strana svobodomyslná"
-CZE_social_conservative_party:0 "KSS"
-CZE_social_conservative_party_long:0 "Křesťansko-sociální strana"
-CZE_authoritarian_democrat_party:0 "AS"
-CZE_authoritarian_democrat_party_long:0 "Agrární strana"
-CZE_paternal_autocrat_party:0 "NS"
-CZE_paternal_autocrat_party_long:0 "Národní sjednocení"
-CZE_national_populist_party:0 "NL"
-CZE_national_populist_party_long:0 "Národní liga"
+CZE_totalist_party:0 "전위대"
+CZE_totalist_party_long:0 "혁명적 전위대"
+CZE_syndicalist_party:0 "연합회"
+CZE_syndicalist_party_long:0 "체코 무정부 생디칼리즘 연합회"
+CZE_radical_socialist_party:0 "급진사회민주당"
+CZE_radical_socialist_party_long:0 "급진사회민주당"
+CZE_social_democrat_party:0 "사민노동당"
+CZE_social_democrat_party_long:0 "사회민주노동당"
+CZE_social_liberal_party:0 "현실주의자"
+CZE_social_liberal_party_long:0 "체코 진보당"
+CZE_market_liberal_party:0 "청년단"
+CZE_market_liberal_party_long:0 "국가자유당"
+CZE_social_conservative_party:0 "기사당"
+CZE_social_conservative_party_long:0 "기독사회당"
+CZE_authoritarian_democrat_party:0 "농민당"
+CZE_authoritarian_democrat_party_long:0 "농민당"
+CZE_paternal_autocrat_party:0 "통일당"
+CZE_paternal_autocrat_party_long:0 "통일당"
+CZE_national_populist_party:0 "국가회의"
+CZE_national_populist_party_long:0 "국가회의"
 
